# sfmt-class

./: .gitignore  .gitmodules  .hgignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  Makefile.am  Makefile.in  README.md  README.rst  SFMT-Makefile.am  config.h.in  configure  configure.ac  dSFMT-Makefile.am  example.cpp  fetch.sh  get_source.sh  sfmt.hpp
.github/workflows/: build.yaml
SFMT-src-1.4/: Makefile.in
SFMT-src-1.4.1/: Makefile.am  Makefile.in
dSFMT-src-2.2.2/: Makefile.in
dSFMT-src-2.2.3/: Makefile.am  Makefile.in
include/: sfmt.hpp
test/: CMakeLists.txt  example.cpp  output.cpp
