MEXP = 19937
AM_CPPFLAGS = -Wall -Wextra -fno-strict-aliasing -DNDEBUG -DHAVE_SSE2 -DSFMT_MEXP=$(MEXP) -DDSFMT_MEXP=$(MEXP)
AM_CFLAGS = -O3 -msse2
AM_LDFLAGS = -avoid-version
ACLOCAL_AMFLAGS = -I m4
export MEXP AM_CPPFLAGS AM_CFLAGS
export CFLAGS
lib_LIBRARIES = libsfmt.a
lib_LTLIBRARIES = libsfmt.la
libsfmt_a_SOURCES = SFMT/SFMT.c dSFMT/dSFMT.c
libsfmt_la_SOURCES = SFMT/SFMT.c dSFMT/dSFMT.c
libsfmt_la_CFLAGS = $(AM_CFLAGS) -fPIC
include_HEADERS = SFMT/SFMT.h SFMT/SFMT-params.h SFMT/SFMT-params$(MEXP).h dSFMT/dSFMT.h
EXTRA_DIST = README.md\
 SFMT/CHANGE-LOG.txt SFMT/FILES.txt SFMT/LICENSE.txt SFMT/README.txt\
 dSFMT/CHANGE-LOG.txt dSFMT/FILES.txt dSFMT/LICENSE.txt dSFMT/README.txt
